--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -604,6 +604,15 @@
           </div>
         </button>
 
+        <button class="create_item" *ngIf="tabSelected === 'topics' && (auth.loggedIn$ | async) && canUpdate(group)"
+          (click)="topicRequests(group);showCreate=false;">
+          <span class="item_heading" translate="VIEWS.GROUP.BTN_VIEW_TOPIC_REQUESTS"></span>
+          <div class="icon">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10 7L15 12L10 17" stroke="#2C3B47" stroke-width="2" stroke-linecap="round" />
+            </svg>
+          </div>
+        </button>
       </div>
       <div id="close_create" (click)="showCreate = false;"></div>
     </div>
