FIX remove users phone number

--- a/src/app/group/components/group-member-user/group-member-user.component.html
+++ b/src/app/group/components/group-member-user/group-member-user.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="member_name_wrap">
         <div class="bold" [innerHtml]>{{member.name}}</div>
-        <div class="member_info">{{member.email}} {{member.phoneNumber}}</div>
+        <div class="member_info">{{member.email}}</div>
       </div>
     </div>
     <div class="line_separator mobile_show"></div>
