--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1695,7 +1695,7 @@ tour-item-template {
           align-items: flex-start;
           vertical-align: middle;
           text-align: left;
-          word-break: break-all;
+          word-break: break-word;
         }
       }
       .tooltip_footer {
