Add request to add topics to group button

--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -616,16 +616,27 @@
       </div>
       <div id="close_create" (click)="showCreate = false;"></div>
     </div>
-    <ng-container *ngIf="tabSelected === 'topics' && (auth.loggedIn$ | async) && canUpdate(group)">
-      <button class="btn_medium_submit" (click)="showCreateMenu()" [ngClass]="{active: showCreate}"><svg width="25"
-          height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M12.5 20C11.9711 20 11.5423 19.5712 11.5423 19.0423L11.5423 12.9577L5.45775 12.9577C4.9288 12.9577 4.5 12.5289 4.5 12C4.5 11.4711 4.9288 11.0423 5.45775 11.0423H11.5423V4.95775C11.5423 4.4288 11.9711 4 12.5 4C13.0289 4 13.4577 4.4288 13.4577 4.95775L13.4577 11.0423L19.5423 11.0423C20.0712 11.0423 20.5 11.4711 20.5 12C20.5 12.5289 20.0712 12.9577 19.5423 12.9577H13.4577V19.0423C13.4577 19.5712 13.0289 20 12.5 20Z"
-            fill="white" />
-        </svg>
-        <span translate="VIEWS.GROUP.BTN_ADD_OR_CREATE_TOPICS"></span>
-      </button>
-      <!--button class="btn_medium_submit animate"
+    <ng-container *ngIf="tabSelected === 'topics'">
+      <ng-container *ngIf="(auth.loggedIn$ | async) && !canUpdate(group)">
+        <button class="btn_medium_submit" (click)="requestAddTopics(group)" [ngClass]="{active: showCreate}"><svg width="25"
+            height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12.5 20C11.9711 20 11.5423 19.5712 11.5423 19.0423L11.5423 12.9577L5.45775 12.9577C4.9288 12.9577 4.5 12.5289 4.5 12C4.5 11.4711 4.9288 11.0423 5.45775 11.0423H11.5423V4.95775C11.5423 4.4288 11.9711 4 12.5 4C13.0289 4 13.4577 4.4288 13.4577 4.95775L13.4577 11.0423L19.5423 11.0423C20.0712 11.0423 20.5 11.4711 20.5 12C20.5 12.5289 20.0712 12.9577 19.5423 12.9577H13.4577V19.0423C13.4577 19.5712 13.0289 20 12.5 20Z"
+              fill="white" />
+          </svg>
+          <span translate="VIEWS.GROUP.BTN_REQUEST_ADD_TOPICS"></span>
+        </button>
+      </ng-container>
+      <ng-container *ngIf="(auth.loggedIn$ | async) && canUpdate(group)">
+        <button class="btn_medium_submit" (click)="showCreateMenu()" [ngClass]="{active: showCreate}"><svg width="25"
+            height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12.5 20C11.9711 20 11.5423 19.5712 11.5423 19.0423L11.5423 12.9577L5.45775 12.9577C4.9288 12.9577 4.5 12.5289 4.5 12C4.5 11.4711 4.9288 11.0423 5.45775 11.0423H11.5423V4.95775C11.5423 4.4288 11.9711 4 12.5 4C13.0289 4 13.4577 4.4288 13.4577 4.95775L13.4577 11.0423L19.5423 11.0423C20.0712 11.0423 20.5 11.4711 20.5 12C20.5 12.5289 20.0712 12.9577 19.5423 12.9577H13.4577V19.0423C13.4577 19.5712 13.0289 20 12.5 20Z"
+              fill="white" />
+          </svg>
+          <span translate="VIEWS.GROUP.BTN_ADD_OR_CREATE_TOPICS"></span>
+        </button>
+        <!--button class="btn_medium_submit animate"
         *ngIf="tabSelected === 'topics' && (auth.loggedIn$ | async) && canUpdate(group)"
         (click)="addTopicDialog(group)"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -633,6 +644,7 @@
             d="M12 20C11.4711 20 11.0423 19.5712 11.0423 19.0423L11.0423 12.9577L4.95775 12.9577C4.4288 12.9577 4 12.5289 4 12C4 11.4711 4.4288 11.0423 4.95775 11.0423H11.0423V4.95775C11.0423 4.4288 11.4711 4 12 4C12.5289 4 12.9577 4.4288 12.9577 4.95775L12.9577 11.0423L19.0423 11.0423C19.5712 11.0423 20 11.4711 20 12C20 12.5289 19.5712 12.9577 19.0423 12.9577H12.9577V19.0423C12.9577 19.5712 12.5289 20 12 20Z"
             fill="white" />
         </svg><span translate="VIEWS.GROUP.BTN_ADD_TOPICS"></span></!--button-->
+      </ng-container>
     </ng-container>
     <ng-container
       *ngIf="(auth.loggedIn$ | async) && group.visibility === GroupService.VISIBILITY.public || (group.visibility === GroupService.VISIBILITY.private && canUpdate(group))">
