--- a/src/app/group/components/group-request-topics/group-request-topics.component.html
+++ b/src/app/group/components/group-request-topics/group-request-topics.component.html
@@ -18,6 +18,8 @@
         </div>
       </div>
     </div>
+    <ng-container *ngIf="memberTopics$ | async"></ng-container>
+
     <div class="dialog_content">
       <div class="content_section">
         <div class="section_content_wrap">
