--- a/src/app/public-topics/components/topicbox/topicbox.component.scss
+++ b/src/app/public-topics/components/topicbox/topicbox.component.scss
@@ -109,6 +109,13 @@
       }
     }
 
+    &.ideation {
+      background-color: var(--color-ideation-disabled);
+      .progress {
+        background-color: var(--color-ideation);
+      }
+    }
+
     &.closed {
       background-color: var(--color-argument-info);
     }
