--- a/src/styles.scss
+++ b/src/styles.scss
@@ -670,6 +670,29 @@ html {
   }
 }
 
+.tabs_wrap {
+  display: flex;
+  gap: 24px;
+  width: 100%;
+  justify-content: space-between;
+
+  .tabs_row {
+    width: 100%;
+
+    @include mixins.mobile {
+      justify-content: center;
+    }
+  }
+
+  button {
+    min-width: 240px;
+
+    @include mixins.mobile {
+      display: none;
+    }
+  }
+}
+
 .vertical_line_separator {
   width: 1px;
   margin: 8px 0;
@@ -1228,6 +1251,66 @@ tour-item-template {
     0px 12px 16px 0px rgba(50, 85, 112, 0.1);
 }
 
+.ideation_wrap {
+  background-color: var(--color-dialog-ideation);
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 16px;
+  margin-bottom: 20px;
+
+
+  .ideation_header {
+    display: flex;
+    width: 100%;
+    padding: 12px 16px;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--color-dialog-ideation-contrast);
+    border-radius: 16px 16px 0px 0px;
+
+    @include mixins.tablet {
+      .options {
+        right: 0;
+      }
+    }
+    @include mixins.mobile {
+      flex-direction: column-reverse;
+      gap: 8px;
+    }
+
+    .header_division {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      @include mixins.mobile {
+        width: 100%;
+        justify-content: space-between;
+        gap: 8px;
+
+        .icon_ideation {
+          display: none;
+        }
+
+        .setting_button {
+          justify-self: flex-end;
+        }
+      }
+    }
+    .ideation_question {
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 24px; /* 133.333% */
+    }
+    .ideation_deadline {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+  }
+
+}
 .vote_wrap {
   background-color: var(--color-argument-pro-light);
   border-radius: 16px;
