--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -1,4 +1,24 @@
 <a class="idea" (click)="(!idea.report)? goToView(): ''" [ngClass]="{'moderated': idea.report}">
+  <div class="moderated_topic" *ngIf="idea.report">
+    <div class="notification">
+      <div>
+        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="40" height="40" rx="20" fill="#F39129" />
+          <path
+            d="M19.0645 8C18.4876 8 18.0304 8.48668 18.0664 9.06238L18.9414 23.0624C18.9743 23.5894 19.4114 24 19.9395 24H20.0605C20.5886 24 21.0257 23.5894 21.0586 23.0624L21.9336 9.06238C21.9696 8.48668 21.5124 8 20.9355 8H19.0645Z"
+            fill="white" />
+          <path
+            d="M20 31C21.1046 31 22 30.1046 22 29C22 27.8954 21.1046 27 20 27C18.8954 27 18 27.8954 18 29C18 30.1046 18.8954 31 20 31Z"
+            fill="white" />
+        </svg>
+      </div>
+      <div class="notification_title" translate="COMPONENTS.TOPICBOX.NOTIFICATION_TITLE"></div>
+      <div class="notification_links">
+        <a translate="COMPONENTS.TOPICBOX.NOTIFICATION_LNK_WHY" (click)="reportReasonDialog()"></a>
+        <a translate="COMPONENTS.TOPICBOX.NOTIFICATION_LNK_VIEW" (click)="goToView()"></a>
+      </div>
+    </div>
+  </div>
   <div class="idea_header">
     <div class="idea_header_left">
       <div class="avatar">
@@ -9,13 +29,19 @@
         </div>
       </div>
       <div class="vertical_line_separator"></div>
-      <button class="btn_small_plain icon">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <button class="btn_small_plain icon" (click)="toggleFavourite()" *ngIf="(Auth.loggedIn$ | async)">
+        <svg *ngIf="!idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
             d="M14.6459 8.35942L12.0009 3L9.35588 8.35942L3.44141 9.21885L7.72116 13.3906L6.71085 19.2812L12.0009 16.5L17.291 19.2812L16.2807 13.3906L20.5604 9.21885L14.6459 8.35942ZM16.2625 10.6153L13.3178 10.1874L12.0009 7.5191L10.684 10.1874L7.73933 10.6153L9.87012 12.6923L9.36711 15.6251L12.0009 14.2404L14.6347 15.6251L14.1317 12.6923L16.2625 10.6153Z"
             fill="#2C3B47" />
         </svg>
-
+        <svg *ngIf="idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M12 3L14.645 8.35942L20.5595 9.21885L16.2798 13.3906L17.2901 19.2812L12 16.5L6.70993 19.2812L7.72025 13.3906L3.44049 9.21885L9.35497 8.35942L12 3Z"
+            fill="#2C3B47" />
+        </svg>
       </button>
     </div>
     <div class="idea_header_right">
@@ -28,48 +54,84 @@
           </svg>
         </button>
         <div class="options button_options">
-          <button *ngIf="canEdit()" class="option" (click)="ideaEditMode()">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z"
-                fill="#2C3B47" />
-            </svg>
-            <span translate="COMPONENTS.ARGUMENT.OPTION_EDIT"></span>
-          </button>
-          <button class="option" #loggedIn (click)="doIdeaReport()"><svg width="16" height="16"
-              viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="8" cy="8" r="5.5" fill="#2C3B47" stroke="#2C3B47" />
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M4.83552 4.12842L11.8714 11.1643C11.6598 11.4228 11.4228 11.6598 11.1643 11.8714L4.12842 4.83552C4.34 4.57697 4.57697 4.34 4.83552 4.12842Z"
-                fill="white" />
-            </svg>
-            <span translate="COMPONENTS.ARGUMENT.OPTION_REPORT"></span>
-          </button>
-          <button class="option" *ngIf="isEdited()" (click)="idea.showEdits = !idea.showEdits">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-              <path
-                d="M0 6C0.521305 3.15556 3.00971 1 6 1C7.91262 1 9.61969 1.88184 10.7383 3.26175L8.68681 5.31319C8.5647 4.83384 8.31585 4.39155 7.96074 4.03581C7.44072 3.51488 6.73542 3.22222 6 3.22222C5.26458 3.22222 4.55928 3.51488 4.03926 4.03581C3.51924 4.55675 3.2271 5.26329 3.2271 6C3.2271 6.73671 3.51924 7.44325 4.03926 7.96419C4.39321 8.31875 4.83299 8.56757 5.30967 8.69033L3.52425 10.4757C1.71392 9.66945 0.368041 8.00604 0 6Z"
-                fill="#2C3B47" />
-              <path
-                d="M7.66374 6C7.66374 6.12901 7.64881 6.25649 7.6199 6.3801L6.37658 7.62342C6.25408 7.65194 6.1278 7.66667 6 7.66667C5.55875 7.66667 5.13557 7.49107 4.82356 7.17851C4.51155 6.86595 4.33626 6.44203 4.33626 6C4.33626 5.55797 4.51155 5.13405 4.82356 4.82149C5.13557 4.50893 5.55875 4.33333 6 4.33333C6.44125 4.33333 6.86443 4.50893 7.17644 4.82149C7.48845 5.13405 7.66374 5.55797 7.66374 6Z"
-                fill="#2C3B47" />
-              <path
-                d="M13.9968 7.75355L11.2464 5.00308L5.27609 10.9733L5.00324 13.4272C4.96672 13.7555 5.24407 14.0331 5.57235 13.9968L8.02451 13.7261L13.9968 7.75355Z"
-                fill="#2C3B47" />
-              <path
-                d="M14.4065 3.30213L15.6979 4.59358C16.1007 4.99641 16.1007 5.64955 15.6979 6.0526L14.483 7.26757L11.7326 4.51709L12.9475 3.30213C13.3503 2.89929 14.0037 2.89929 14.4065 3.30213Z"
-                fill="#2C3B47" />
-            </svg>
-            <span translate="VIEWS.TOPICS_TOPICID.ARGUMENT_LNK_VIEW_PREVIOUS_VERSIONS"></span>
-          </button>
-          <button *ngIf="canEdit()" class="option error_text" (click)="doShowDeleteIdea()">
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M10 3H6V4H10V3ZM11 4V3C11 2.44772 10.5523 2 10 2H6C5.44772 2 5 2.44772 5 3V4H4H2.5C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H4V13C4 13.5523 4.44772 14 5 14H11C11.5523 14 12 13.5523 12 13V5H13.5C13.7761 5 14 4.77614 14 4.5C14 4.22386 13.7761 4 13.5 4H12H11ZM7 7H6V11H7V7ZM10 7H9V11H10V7Z"
-                fill="#2C3B47" />
-            </svg>
-            <span translate="COMPONENTS.ARGUMENT.OPTION_DELETE"></span>
-          </button>
+          <ng-container *ngIf="(Auth.loggedIn$ | async)">
+            <button class="option" (click)="toggleFavourite()">
+              <div class="icon_wrap">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M8 1L10.0572 5.16844L14.6574 5.83688L11.3287 9.08156L12.1145 13.6631L8 11.5L3.8855 13.6631L4.6713 9.08156L1.3426 5.83688L5.94275 5.16844L8 1Z"
+                    fill="#2C3B47" />
+                </svg>
+              </div>
+              <span *ngIf="!idea.favourite" translate="COMPONENTS.IDEABOX.OPTION_FAVOURITE"></span>
+              <span *ngIf="idea.favourite" translate="COMPONENTS.IDEABOX.OPTION_UNFAVOURITE"></span>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="canEdit()">
+            <div class="line_separator"></div>
+            <button class="option" (click)="addToFolder()">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M2.05 13C1.77 13 1.525 12.894 1.315 12.682C1.105 12.4701 1 12.2323 1 11.9688V3.03125C1 2.76771 1.105 2.52995 1.315 2.31797C1.525 2.10599 1.77 2 2.05 2H6.5125C6.6525 2 6.78958 2.02865 6.92375 2.08594C7.05792 2.14323 7.17167 2.21771 7.265 2.30937L8 4H13.95C14.2183 4 14.4604 4.10599 14.6763 4.31797C14.8921 4.52995 15 4.76771 15 5.03125V11.9688C15 12.2323 14.8921 12.4701 14.6763 12.682C14.4604 12.894 14.2183 13 13.95 13H2.05Z"
+                  fill="#2C3B47" />
+              </svg>
+              <span translate="COMPONENTS.IDEABOX.OPTION_ADD_TO_FOLDER"></span>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="canEdit()">
+            <div class="line_separator"></div>
+            <button class="option" (click)="ideaEditMode()">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z"
+                  fill="#2C3B47" />
+              </svg>
+              <span translate="COMPONENTS.IDEABOX.OPTION_EDIT"></span>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="Auth.loggedIn$">
+            <div class="line_separator"></div>
+            <button class="option" (click)="doIdeaReport()"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <circle cx="8" cy="8" r="5.5" fill="#2C3B47" stroke="#2C3B47" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4.83552 4.12842L11.8714 11.1643C11.6598 11.4228 11.4228 11.6598 11.1643 11.8714L4.12842 4.83552C4.34 4.57697 4.57697 4.34 4.83552 4.12842Z"
+                  fill="white" />
+              </svg>
+              <span translate="COMPONENTS.IDEABOX.OPTION_REPORT"></span>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="isEdited()">
+            <div class="line_separator"></div>
+            <button class="option" (click)="idea.showEdits = !idea.showEdits">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <path
+                  d="M0 6C0.521305 3.15556 3.00971 1 6 1C7.91262 1 9.61969 1.88184 10.7383 3.26175L8.68681 5.31319C8.5647 4.83384 8.31585 4.39155 7.96074 4.03581C7.44072 3.51488 6.73542 3.22222 6 3.22222C5.26458 3.22222 4.55928 3.51488 4.03926 4.03581C3.51924 4.55675 3.2271 5.26329 3.2271 6C3.2271 6.73671 3.51924 7.44325 4.03926 7.96419C4.39321 8.31875 4.83299 8.56757 5.30967 8.69033L3.52425 10.4757C1.71392 9.66945 0.368041 8.00604 0 6Z"
+                  fill="#2C3B47" />
+                <path
+                  d="M7.66374 6C7.66374 6.12901 7.64881 6.25649 7.6199 6.3801L6.37658 7.62342C6.25408 7.65194 6.1278 7.66667 6 7.66667C5.55875 7.66667 5.13557 7.49107 4.82356 7.17851C4.51155 6.86595 4.33626 6.44203 4.33626 6C4.33626 5.55797 4.51155 5.13405 4.82356 4.82149C5.13557 4.50893 5.55875 4.33333 6 4.33333C6.44125 4.33333 6.86443 4.50893 7.17644 4.82149C7.48845 5.13405 7.66374 5.55797 7.66374 6Z"
+                  fill="#2C3B47" />
+                <path
+                  d="M13.9968 7.75355L11.2464 5.00308L5.27609 10.9733L5.00324 13.4272C4.96672 13.7555 5.24407 14.0331 5.57235 13.9968L8.02451 13.7261L13.9968 7.75355Z"
+                  fill="#2C3B47" />
+                <path
+                  d="M14.4065 3.30213L15.6979 4.59358C16.1007 4.99641 16.1007 5.64955 15.6979 6.0526L14.483 7.26757L11.7326 4.51709L12.9475 3.30213C13.3503 2.89929 14.0037 2.89929 14.4065 3.30213Z"
+                  fill="#2C3B47" />
+              </svg>
+              <span translate="COMPONENTS.IDEABOX.OPTION_VIEW_PREVIOUS_VERSIONS"></span>
+            </button>
+          </ng-container>
+          <ng-container *ngIf="canEdit()">
+            <div class="line_separator"></div>
+            <button class="option error_text" (click)="doShowDeleteIdea()">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M10 3H6V4H10V3ZM11 4V3C11 2.44772 10.5523 2 10 2H6C5.44772 2 5 2.44772 5 3V4H4H2.5C2.22386 4 2 4.22386 2 4.5C2 4.77614 2.22386 5 2.5 5H4V13C4 13.5523 4.44772 14 5 14H11C11.5523 14 12 13.5523 12 13V5H13.5C13.7761 5 14 4.77614 14 4.5C14 4.22386 13.7761 4 13.5 4H12H11ZM7 7H6V11H7V7ZM10 7H9V11H10V7Z"
+                  fill="#2C3B47" />
+              </svg>
+              <span translate="COMPONENTS.IDEABOX.OPTION_REMOVE"></span>
+            </button>
+          </ng-container>
         </div>
       </div>
     </div>
@@ -97,18 +159,15 @@
           </svg>
         </div>
       </button>
-      <div class="like_counter_wrap" >
-        <ng-container *ngIf="votes$ | async as votes; else noCount">
-          {{votes}}
-        </ng-container>
-        <ng-template #noCount>0</ng-template>
+      <div class="like_counter_wrap" [innerHTML]="idea.votes.up.count">
+
       </div>
     </div>
   </div>
   <div class="idea_footer">
     <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
     <div class="replies_count">
-      <a>1 replies</a>
+      <a translate="COMPONENTS.IDEABOX.REPLIES" [translateParams]="{count: idea.replies.count}"></a>
     </div>
   </div>
 </a>
