--- a/src/app/topic/components/post-argument/post-argument.component.html
+++ b/src/app/topic/components/post-argument/post-argument.component.html
@@ -83,8 +83,8 @@
       </button>
     </div>
     <div id="navigate_create">
-      <div id="chars_left" translate="COMPONENTS.POST_ARGUMENT.ARGUMENT_TYPE_CHARACTER_LIMIT"
-        [translateParams]="{numberOfCharacters: argumentMaxLength() - (argumentForm.value['text']?.length || 0)}"></div>
+      <!--div id="chars_left" translate="COMPONENTS.POST_ARGUMENT.ARGUMENT_TYPE_CHARACTER_LIMIT"
+        [translateParams]="{numberOfCharacters: argumentMaxLength() - (argumentForm.value['text']?.length || 0)}"></!--div-->
       <!--button class="btn_big_submit_ghost">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
