--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -1127,7 +1127,7 @@
           <rect x="11" y="24" width="6" height="1" rx="0.5" fill="#4D5C6A" />
         </svg>
       </a>
-      <a class="topic_tab discussion" [ngClass]="{'active': tabTablet==='discussion'}" (click)="tabTablet='discussion'"
+      <a class="topic_tab discussion" *ngIf="!hideDiscussion" [ngClass]="{'active': tabTablet==='discussion'}" (click)="tabTablet='discussion'"
         [routerLink]="['./']" fragment="discussion">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="32" height="32" rx="16" fill="#1168A8" />
