--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -472,15 +472,15 @@
                           fill="white" />
                       </svg>
 
-                      <span translate="VIEWS.TOPICS_TOPICID.NO_VOTING_BTN_ADD"></span></button>
+                      <span translate="VIEWS.TOPICS_TOPICID.NO_IDEATION_BTN_ADD"></span></button>
                   </div>
                   <div class="no_feature_description">
                     <div class="description_text">
-                      <div class="description_heading" translate="VIEWS.TOPICS_TOPICID.NO_VOTING_DESC_HEADING"></div>
+                      <div class="description_heading" translate="VIEWS.TOPICS_TOPICID.NO_IDEATION_DESC_HEADING"></div>
                       <div>
-                        <span translate="VIEWS.TOPICS_TOPICID.NO_VOTING_DESC_BEFORE"></span>
+                        <span translate="VIEWS.TOPICS_TOPICID.NO_IDEATION_DESC_BEFORE"></span>
                         <br>
-                        <br><span translate="VIEWS.TOPICS_TOPICID.NO_VOTING_DESC_AFTER"></span>
+                        <br><span translate="VIEWS.TOPICS_TOPICID.NO_IDEATION_DESC_AFTER"></span>
                       </div>
                     </div>
                     <!--div class="description_video">
