--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -1,5 +1,5 @@
-<a class="idea" (click)="(!idea.report)? goToView(): ''" [ngClass]="{'moderated': idea.report}" [routerLink]="['/','topics', topicId, 'ideation', ideationId, 'ideas', idea.id ]">
-  <div class="moderated_topic" *ngIf="idea.report">
+<a class="idea" [ngClass]="{'moderated': idea.report.id}">
+  <div class="moderated_topic" *ngIf="idea.report && idea.report.id">
     <div class="notification">
       <div>
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -12,39 +12,41 @@
             fill="white" />
         </svg>
       </div>
-      <div class="notification_title" translate="COMPONENTS.TOPICBOX.NOTIFICATION_TITLE"></div>
+      <div class="notification_title" translate="COMPONENTS.IDEABOX.NOTIFICATION_TITLE"></div>
       <div class="notification_links">
-        <a translate="COMPONENTS.TOPICBOX.NOTIFICATION_LNK_WHY" (click)="reportReasonDialog()"></a>
-        <a translate="COMPONENTS.TOPICBOX.NOTIFICATION_LNK_VIEW" (click)="goToView()"></a>
+        <a translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_WHY" (click)="reportReasonDialog()"></a>
+        <a translate="COMPONENTS.IDEABOX.NOTIFICATION_LNK_VIEW" (click)="goToView($event)"></a>
       </div>
     </div>
   </div>
   <div class="idea_header">
     <div class="idea_header_left">
       <div class="avatar">
-        <img *ngIf="idea.creator.imageUrl" [src]="idea.creator.imageUrl" />
-        <div class="profile_image_filler" *ngIf="!idea.creator.imageUrl">
-          <cos-initials *ngIf="idea.creator.name" [name]="idea.creator.name || ''">
+        <img *ngIf="idea.author.imageUrl" [src]="idea.author.imageUrl" />
+        <div class="profile_image_filler" *ngIf="!idea.author.imageUrl">
+          <cos-initials *ngIf="idea.author.name" [name]="idea.author.name || ''">
           </cos-initials>
         </div>
       </div>
-      <div class="vertical_line_separator"></div>
-      <button class="btn_small_plain icon" (click)="toggleFavourite()" *ngIf="(Auth.loggedIn$ | async)">
-        <svg *ngIf="!idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd"
-            d="M14.6459 8.35942L12.0009 3L9.35588 8.35942L3.44141 9.21885L7.72116 13.3906L6.71085 19.2812L12.0009 16.5L17.291 19.2812L16.2807 13.3906L20.5604 9.21885L14.6459 8.35942ZM16.2625 10.6153L13.3178 10.1874L12.0009 7.5191L10.684 10.1874L7.73933 10.6153L9.87012 12.6923L9.36711 15.6251L12.0009 14.2404L14.6347 15.6251L14.1317 12.6923L16.2625 10.6153Z"
-            fill="#2C3B47" />
-        </svg>
-        <svg *ngIf="idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M12 3L14.645 8.35942L20.5595 9.21885L16.2798 13.3906L17.2901 19.2812L12 16.5L6.70993 19.2812L7.72025 13.3906L3.44049 9.21885L9.35497 8.35942L12 3Z"
-            fill="#2C3B47" />
-        </svg>
-      </button>
+      <ng-container *ngIf="(Auth.loggedIn$ | async)">
+        <div class="vertical_line_separator"></div>
+        <button class="btn_small_plain icon" (click)="$event.preventDefault();$event.stopPropagation();toggleFavourite();">
+          <svg *ngIf="!idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M14.6459 8.35942L12.0009 3L9.35588 8.35942L3.44141 9.21885L7.72116 13.3906L6.71085 19.2812L12.0009 16.5L17.291 19.2812L16.2807 13.3906L20.5604 9.21885L14.6459 8.35942ZM16.2625 10.6153L13.3178 10.1874L12.0009 7.5191L10.684 10.1874L7.73933 10.6153L9.87012 12.6923L9.36711 15.6251L12.0009 14.2404L14.6347 15.6251L14.1317 12.6923L16.2625 10.6153Z"
+              fill="#2C3B47" />
+          </svg>
+          <svg *ngIf="idea.favourite" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M12 3L14.645 8.35942L20.5595 9.21885L16.2798 13.3906L17.2901 19.2812L12 16.5L6.70993 19.2812L7.72025 13.3906L3.44049 9.21885L9.35497 8.35942L12 3Z"
+              fill="#2C3B47" />
+          </svg>
+        </button>
+      </ng-container>
     </div>
-    <div class="idea_header_right">
+    <div class="idea_header_right" *ngIf="(Auth.loggedIn$ | async) || isEdited()">
       <div class="dropdown button_dropdown" [cosDropdown]>
         <button class="btn_small_plain icon">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -136,10 +138,10 @@
       </div>
     </div>
   </div>
-  <div class="idea_content">
+  <a class="idea_content" (click)="(!idea.report.id)? goToView($event): ''" >
     <div class="statement" [innerHTML]="idea.statement"></div>
     <div class="btn_like_wrap">
-      <button class="btn_medium_plain btn_like" (click)="doIdeaVote(1)">
+      <button class="btn_medium_plain btn_like" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
         <div class="icon">
           <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <mask id="path-1-inside-1_12557_36360" fill="white">
@@ -163,7 +165,7 @@
 
       </div>
     </div>
-  </div>
+  </a>
   <div class="idea_footer">
     <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
     <div class="replies_count">
